fix visibility of text viz while loading

--- a/style/text-viz.less
+++ b/style/text-viz.less
@@ -65,7 +65,7 @@
     }
 
     &.connect-viz-loading, &.connect-viz-in-error{
-        .connect-text-value > span{
+        .connect-text-results > span{
             visibility: hidden;
         }
     }    
